# gmail-mcp

./: .gitignore  README.md  new-features.md  pyproject.toml
src/gmail_mcp/: __init__.py  audit.py  auth.py  config.py  gmail_client.py  security.py  server.py
tests/: test_gmail_client.py  test_new_features.py  test_security.py
